scss/partials/_stream_item.scss
div.stream-item {
  width: #{$board_container_width}px;
  margin: 12px 0px 16px;
  border: 1px solid #ECECEC;
  border-radius: 6px;
  padding: 32px 40px;
  background-color: white;

  @include mobile() {
    width: 100%;
    padding: 24px 16px;
    margin: 0;
    border: none;
    border-bottom: 4px solid #ECECEC;
    border-radius: 0;
  }

  &.new-item {
    div.stream-item-header {
      div.stream-header-head-author {
        div.new-tag {
          display: inline-block;
        }
      }
    }
  }

  &.show-continue-reading:not(.single-post-view) {
    div.stream-item-body-ext {
      div.stream-item-footer {
        button.expand-button {
          display: block;
        }
      }
    }
  }

  div.activity-share-container {
    div.activity-share-modal-container {
      right: -9px;
      margin-top: 40px;
    }
  }

  div.stream-item-header {
    @include mobile() {
      width: 100%;
    }
    
    div.more-menu {
      @include mobile() {
        display: block;
        float: right;

        ul.more-menu-list {
          left: unset;
          right: 16px;
        }
      }
    }

    div.stream-header-head-author {
      float: left;
      width: 55%;

      @include activity-author(32);

      @include mobile() {
        width: 80%;
      }

      div.name {
        @include mobile() {
          width: auto;
        }
      }

      div.time-since {
        float: left;
        @include mobile() {
          width: auto;
        }
      }

      div.separator {
        width: 3px;
        height: 3px;
        border-radius: 4px;
        background-color: $light_ui_grey;
        margin: 6px 8px 0px;
        float: left;
      }

      div.stream-item-wrt {
        float: left;
      }

      @include new-tag();

      div.new-tag {
        display: none;
      }
    }
  }

  div.stream-item-body-ext {
    padding: 0px;
    border-radius: 6px;

    @include mobile() {
      display: block;
    }

    div.stream-attachments {
      @include mobile() {
        position: relative;
        bottom: unset;
      }
    }

    &.expanded {
      div.thumbnail-container {
        cursor: default;

        div.ziggeo-player {
          margin-top: 24px;
          margin-bottom: 24px;
          float: unset;
          width: 638px;
          height: 478px;
          position: relative;
          top: unset;
          right: unset;
          transform: translate(0%,0%);

          video {
            max-height: 478px;
          }

          @include tablet(){
            width: 100vw;
            height: calc(100vw *  0.75);
          }
        }

        div.body-thumbnail {
          display: none;
        }
      }
    }

    div.thumbnail-container {
      position: relative;
      cursor: pointer;

      div.ziggeo-player {
        width: 136px;
        height: 102px;
        position: absolute;
        right: 0;
        top: 50%;
        transform: translateY(-50%);

        video {
          max-height: 102px;
        }

        @include tablet(){
          margin-top: 16px;
          float: unset;
          width: calc(100vw + 32px);
          height: auto;
          margin-left: -16px;

          video {
            max-height: calc(100vw * 0.75);
          }

          div.ba-videoplayer-carrot-theme-volumebar, div[data-selector="button-icon-volume"] {
            display: none !important;
          }
        }
      }

      div.body-thumbnail {
        width: 136px;
        height: 102px;
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center;
        transform: translateY(-50%);
        position: absolute;
        right: 0;
        top: 50%;
        cursor: pointer;

        &.video {
          &:hover:after {
            opacity: 1;
          }

          &:after {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            content: "";
            width: 45px;
            height: 45px;
            background-image: cdnUrl("/img/ML/play.svg");
            background-repeat: no-repeat;
            background-position: center;
            background-size: 45px;
            opacity: 0.6;
          }
        }
      }
    }

    div.stream-body-left {
      position: relative;
      margin-top: 8px;

      &.has-thumbnail {
        float: left;
        width: 400px;
        min-height: 98px;
      }

      @include mobile() {
        width: 100%;
        margin: 8px 0px 0px;
      }

      div.stream-item-headline {
        @include activity-title();
        @include avenir_H();
        font-size: 22px;
        color: $deep_navy;
        line-height: 28px;
        display: inline;
        @include mobile() {
          margin-top: 16px;
        }
      }

      @include must-see();

      div.stream-item-body-container {

        div.stream-item-body {

          &.expanded {
            div.stream-item-body-inner.to-truncate {
              display: none;
            }

            div.stream-item-body-inner.no-truncate {
              display: block;
            }
          }

          div.stream-item-body-inner {
            margin-top: 8px;

            &.to-truncate{
              @include activity-body(16, 22, 22, $deep_navy);
              color: $deep_navy;
              @include avenir_R();
              line-height: 22px;

              @include mobile() {
                @include activity-body(18, 24, 24, $deep_navy); 
                line-height: 24px;
              }

              &.hide-images {
                img {
                  display: none;
                }
              }
            }

            &.no-truncate {
              @include activity-body(16, 22, 22, $deep_navy);
              color: $deep_navy;
              @include avenir_R();
              line-height: 22px;
              display: none;

              @include mobile() {
                @include activity-body(18, 24, 24, $deep_navy); 
                line-height: 24px;
              }
            }

            &>*:first-child {
              margin-top: 0px;
            }

            div.carrot-no-preview, a.carrot-no-preview {
              display: none;
            }
          }
        }
      }
    }

    div.stream-item-transcript {
      margin-top: 16px;
      white-space: pre-wrap;
      word-wrap: break-word;
      width: 100%;
      background-color: rgba(#ECECEC, 0.2);
      border-top: 1px solid #ECECEC;
      padding: 24px;

      div.stream-item-transcript-header {
        @include avenir_M();
        font-size: 12px;
        color: $light_ui_grey;
      }

      div.stream-item-transcript-content {
        margin-top: 24px;
        @include avenir_BOOK();
        font-size: 16px;
        color: $deep_navy;
      }
    }

    div.stream-item-footer {
      height: 32px;
      margin-top: 8px;

      @include mobile() {
        margin-top: 16px;
      }
      
      div.mobile-summary {
        float: right;
        margin-top: 10px;

        div.mobile-comments-summary {
          float: left;
          height: 16px;
          margin-left: 6px;

          div.mobile-comments-summary-icon {
            background-image: cdnUrl("/img/ML/tile_comments_icon_mobile.svg");
            background-size: 14px 14px;
            background-position: center;
            background-repeat: no-repeat;
            width: 14px;
            height: 14px;
            float: left;
            display: block;
          }

          span {
            margin-left: 6px;
            font-size: 12px;
            color: $light_ui_grey;
            margin-left: 6px;
            line-height: 14px;
            float: left;
            display: block;
          }
        }

        div.mobile-summary-reaction {
          height: 16px;
          margin-left: 6px;
          float: left;

          span.reaction {
            font-size: 12px;
            float: left;
            display: block;
            margin-left: 6px;
          }

          span.count {
            @include avenir_H();
            font-size: 11px;
            color: $ui_grey;
            float: left;
            display: block;
            margin-left: 4px;
          }
        }

        div.mobile-summary-attachments {
          float: right;
          text-align: right;
          height: 16px;
          margin-top: 10px;
          
          span.attachments-icon {
            float: left;
            display: block;
            width: 14px;
            height: 15px;
            background-image: cdnUrl("/img/ML/tile_attachments_icon.svg");
            background-repeat: no-repeat;
            background-size: 14px 15px;
            background-position: center;
          }

          span.attachments-count {
            float: left;
            display: block;
            @include avenir_H();
            font-size: 12px;
            color: $ui_grey;
            margin-left: 6px;
          }
        }
      }

      div.stream-body-draft-edit {
        float: left;

        button.edit-draft-bt {
          text-align: left;
          padding: 0px;
          @include avenir_H();
          font-size: 14px;
          color: $carrot_green;
        }
      }

      div.stream-body-draft-delete {
        float: right;
        button.delete-draft-bt {
          text-align: right;
          padding: 0px;
          @include avenir_R();
          font-size: 14px;
          color: $ui_grey;
        }
      }

      div.stream-item-comments-summary {
        margin-right: 16px;
        margin-top: 4px;
        float: right;
        cursor: pointer;
      }

      div.reactions {
        float: right;
        margin-top: 4px;

        div.reactions-picker-container {
          div.emoji-mart {
            bottom: -26px;
            right: 44px;
            left: unset;

            @include mobile(){
              bottom: unset;
              right: unset;
            }
          }
        }
      }

      @include mobile() {
        position: relative;
        bottom: unset;
      }

      button.expand-button {
        width: 134px;
        height: 24px;
        color: $carrot_green;
        @include avenir_H();
        font-size: 14px;
        text-align: left;
        display: none;
        padding: 6px 7px 0px 22px;
        position: relative;
        overflow: visible;
        float: left;

        @include preload_image(cdnUrl("/img/ML/keep_reading_chevron_up_grey.svg"));

        @include mobile() {
          width: auto;
          margin-right: 24px;
        }

        &:before {
          position: absolute;
          content: "";
          background-image: cdnUrl("/img/ML/keep_reading_chevron.svg");
          background-size: 14px 8px;
          background-position: center;
          background-repeat: no-repeat;
          width: 14px;
          height: 8px;
          top: 12px;
          left: 0px;
          transition: rotate 180ms;
        }

        &.expanded {
          color: $ui_grey;
          &:before {
            background-image: cdnUrl("/img/ML/keep_reading_chevron_up_grey.svg");
          }
        }
      }
    }
  }

  div.stream-body-right {
    position: relative;
    margin-top: 24px;

    div.stream-body-comments {
      height: 100%;

      div.stream-comments-title {
        @include avenir_H();
        font-size: 14px;
        color: $carrot_dark_gray;
        margin-bottom: 8px;
      }
    }
  }
}

